# ash

./: Cargo.toml  LANGUAGE.md  README.md  TODO.md  ash_runtime.c  ash_stdlib.c  install.sh
.claude/: settings.local.json
.github/workflows/: ci.yml
ash-cli/: Cargo.toml
ash-cli/src/: main.rs
ash-vscode/: extension.js  language-configuration.json  package.json
ash-vscode/syntaxes/: ash.tmLanguage.json
benchmark/: README.md  RESULTS.md  benchmark_history.py  results.json  run_benchmark.sh  token_count.py
benchmark/ash/: todo.ash
benchmark/go/: todo.go
benchmark/java/: todo.java
benchmark/python/: todo.py
crates/ash-codegen/: Cargo.toml
crates/ash-codegen/src/: lib.rs
crates/ash-hir/: Cargo.toml
crates/ash-hir/src/: lib.rs
crates/ash-interp/: Cargo.toml
crates/ash-interp/src/: lib.rs
crates/ash-lexer/: Cargo.toml
crates/ash-lexer/src/: lib.rs
crates/ash-lsp/: Cargo.toml
crates/ash-lsp/src/: lib.rs
crates/ash-parser/: Cargo.toml
crates/ash-parser/src/: ast.rs  lib.rs
crates/ash-stdlib/: Cargo.toml
crates/ash-stdlib/src/: lib.rs
crates/ash-typeck/: Cargo.toml
crates/ash-typeck/src/: lib.rs
examples/: closures.ash  env_ops.ash  error_handling.ash  fibonacci.ash  file_ops.ash  hello.ash  interpolation  interpolation.ash  pattern_match.ash  pipeline.ash  stdlib.ash  types.ash
