[package]
name = "ash-interp"
version = "0.1.6"
edition = "2021"

[dependencies]
ash-lexer  = { path = "../ash-lexer" }
ash-parser = { path = "../ash-parser" }
ash-hir    = { path = "../ash-hir" }
ash-typeck = { path = "../ash-typeck" }
ash-stdlib = { path = "../ash-stdlib" }
serde_json = "1"
regex      = "1"
ureq       = "2"
rusqlite   = { version = "0.31", features = ["bundled"] }
