[package]
name = "ash-interp"
version = "0.2.0"
edition = "2021"

[dependencies]
ash-lexer  = { path = "../ash-lexer" }
ash-parser = { path = "../ash-parser" }
ash-hir    = { path = "../ash-hir" }
ash-typeck = { path = "../ash-typeck" }
ash-stdlib = { path = "../ash-stdlib" }
serde_json = "1"
regex      = "1"
ureq       = "2"
rusqlite   = { version = "0.31", features = ["bundled"] }
bcrypt     = "0.15"
jsonwebtoken = "9"
lettre     = { version = "0.11", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
tiny_http  = "0.12"
